objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Backorder__c</fullName>
        <description>Identifica que o item do pedido entrou em back order. Acontece somente após retorno do item do JDEdwards. Se 1 o item está em back order.</description>
        <formula>IF(Descricao_do_status__c = &apos;Back Order&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backorder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlesPerBox__c</fullName>
        <label>Bottles per box</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_Action__c</fullName>
        <inlineHelpText>U: Update
C: Cancel
I: Insert</inlineHelpText>
        <label>Código ação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_unit__c</fullName>
        <formula>PricebookEntry.Product2.CD_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código da unidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campo_de_formatacao__c</fullName>
        <label>Campo de formatação</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Codigo_status_numerico__c</fullName>
        <formula>VALUE( cd_line_status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código status numérico</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cota_Consumida__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cota Consumida</label>
        <referenceTo>LAT_DetalheCotaMarket__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cupom_qtde__c</fullName>
        <description>Preenchido por trigger (before update) através de busca na tabela de cupons (quotas de produto) e conterá a quantidade disponvél por quota para aquele item.</description>
        <inlineHelpText>Preenchido por trigger (before update) através de busca na tabela de cupons (quotas de produto) e conterá a quantidade disponvél por quota para aquele item.</inlineHelpText>
        <label>Cupom_qtde</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descricao_do_status__c</fullName>
        <label>Descrição Status</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_AR__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IN_outline_item__c</fullName>
        <label>Indicador da importância dos impostos</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integracao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integração</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_isSumInQuota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is sum in quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_C9Quantity__c</fullName>
        <label>C9 Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_IPI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CDLineStatusFrom__c</fullName>
        <label>Status (From)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CancellationReason__c</fullName>
        <label>Cancellation reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Country__c</fullName>
        <description>Field used to filter formula fields, workflow rules, etc since Opportunity Product has no record type to filter. A trigger copies the field Country from the related Account to this field.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_EstimatedDeliveryDate__c</fullName>
        <label>Estimated delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_KAMPromisedDate__c</fullName>
        <label>KAM promised date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_LogisticsPromisedDate__c</fullName>
        <label>Logistics promised date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Quota__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by the system to relate the Opportunity Product to the Quota that was valid by the time the Opportunity Product was send to JDE.</description>
        <label>Quota</label>
        <referenceTo>LAT_MX_QTA_Quota__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RealDeliveryDate__c</fullName>
        <label>Real delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_SignedDatedReceipt__c</fullName>
        <label>Signed and dated receipt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_MultipleQuantity__c</fullName>
        <label>Multiple quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_NFTotal__c</fullName>
        <label>NF Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_NFValue__c</fullName>
        <label>NF Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_OpportunityProductOrderLineJDE__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Opportunity Product Order Line JDE</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_OpportunityRecordTypeId__c</fullName>
        <formula>Opportunity.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordType Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentConditionDescription__c</fullName>
        <label>Payment condition description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentCondition__c</fullName>
        <label>Payment condition</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PercentualBonus__c</fullName>
        <label>Percentual bonus</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_RawLinePriceComponents__c</fullName>
        <label>Raw Line Price Components</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_SkuText__c</fullName>
        <label>Sku</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TaxReplacement__c</fullName>
        <label>Tax Replacement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_UnitCode__c</fullName>
        <label>Unit code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDiscount_AR__c</fullName>
        <label>Max Discount %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NR_Order_Item__c</fullName>
        <label>Número da linha do item</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NR_order_line__c</fullName>
        <label>Número da linha de pedido JDE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Bonus__c</fullName>
        <formula>PricebookEntry.Product2.PC_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bônus percentual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentual_de_bonus__c</fullName>
        <label>% Bonif</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preco_total__c</fullName>
        <formula>Qt_total__c *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductQuota_AR__c</fullName>
        <label>Product Quota</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_Bonus__c</fullName>
        <label>Qt Bonif</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_multiple__c</fullName>
        <formula>PricebookEntry.Product2.QT_multiple__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qt Múltiplo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qt_total__c</fullName>
        <formula>IF(QT_Bonus__c +  Quantity &lt;&gt; 0,QT_Bonus__c +  Quantity, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qt Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SaveWithExceededQuota_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save With Exceeded Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SenttoApproveDiscount_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Approve Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <formula>PricebookEntry.Product2.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM_AR__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitWeight__c</fullName>
        <label>Weight</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aux_bonif__c</fullName>
        <label>Aux bonif</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bottles_per_box__c</fullName>
        <formula>PricebookEntry.Product2.bottles_per_box__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G/Caixa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cantidadCotaConsumida__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad Cota Consumida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cd_line_status__c</fullName>
        <label>Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_payment_term__c</fullName>
        <formula>PricebookEntry.Product2.cd_payment_term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condição de pagamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_unit_bonif__c</fullName>
        <formula>PricebookEntry.Product2.QT_base_bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código de unidade de bonificação</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ds_payment_term__c</fullName>
        <formula>PricebookEntry.Product2.ds_payment_term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cond Pagto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pc_discount__c</fullName>
        <label>Porcentagem de desconto</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preco_garrafa__c</fullName>
        <formula>if(bottles_per_box__c  &lt;&gt; 0,UnitPrice / bottles_per_box__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço Garrafa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unit_weight__c</fullName>
        <formula>PricebookEntry.Product2.unit_weight__c</formula>
        <label>Peso Kg</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Controla_perc_e_percent_bonus</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( cd_line_status__c )&amp;&amp; 
Percentual_de_bonus__c &gt; LAT_PercentualBonus__c, 
true,false)</errorConditionFormula>
        <errorDisplayField>Percentual_de_bonus__c</errorDisplayField>
        <errorMessage>Bonificação excedida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controla_perc_e_quant_de_bonificacao</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( cd_line_status__c )&amp;&amp; 
QT_Bonus__c &gt; FLOOR( (LAT_PercentualBonus__c *  Quantity)/100 ), true,false)</errorConditionFormula>
        <errorDisplayField>QT_Bonus__c</errorDisplayField>
        <errorMessage>Bonificação excedida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impede_alteracao_e_delecao_do_item</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  OR(ISCHANGED(Quantity),  ISCHANGED(QT_Bonus__c), ISCHANGED( Percentual_de_bonus__c )), NOT(ISNEW()),  
NOT(ISNULL(Codigo_status_numerico__c)),  NOT(Remover__c), NOT(Integracao__c)
)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Este item não pode ser alterado devido ao seu status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impede_cancelamento_item_do_pedido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Codigo_status_numerico__c &gt; 540,Codigo_status_numerico__c &lt;&gt; 999,NOT(Integracao__c) , Remover__c)</errorConditionFormula>
        <errorDisplayField>Remover__c</errorDisplayField>
        <errorMessage>Este item não pode ser cancelado devido a seu status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_cupom_diponivel</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( cd_line_status__c )&amp;&amp; 
Quantity &gt; Cupom_qtde__c, 
true,false)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>A quantidade pedida para este item excede a quota de produto disponível.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_multiplos</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( cd_line_status__c )&amp;&amp; 
NOT(ISNULL(  QT_multiple__c )) &amp;&amp;  QT_multiple__c  &lt;&gt; 0 &amp;&amp; MOD( Quantity ,QT_multiple__c ) &lt;&gt; 0 ,
true,false)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Quantidade vendida diferente de seu múltiplo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_quantidade_como_inteiro</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( cd_line_status__c )&amp;&amp; 
Quantity &lt;&gt; 0 &amp;&amp; Quantity &lt;&gt; FLOOR( Quantity ), 
true,false)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>A quantidade deve ser um número inteiro.</errorMessage>
    </validationRules>
</CustomObject>